# tui-kit

./: .gitignore  CODEX_SESSION_019e1141_SUMMARY.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PLAN_REWRITE.md  README.md  architecture.md  build.rs  specification.md
.claude/agents/: tui-kit-architect.md  tui-kit-lead.md
.github/workflows/: ci.yml
docs/superpowers/handoffs/: 2026-05-12-phase-1-complete.md  2026-05-13-phase-2-complete.md  2026-05-14-phase-B-render-effect-complete.md  2026-05-14-phase-E-testkit-hardening-complete.md  2026-05-15-image-box-deletion-complete.md  2026-05-15-image-smoke-checklist.md  2026-05-15-phase-D-image-reliability-complete.md
docs/superpowers/plans/: 2026-05-12-phase-1-tui-kit-primitive-cleanup.md  2026-05-12-phase-2-input-event-boundary.md  2026-05-12-phase-3-navpicker-modal-image-elements.md  2026-05-12-tui-kit-c4tui-refactor-roadmap.md  (+5 more)
examples/: explicit_config_startup.rs  terminal_dialog.rs
src/: bar.rs  component.rs  config.rs  elements.rs  events.rs  focus.rs  image.rs  input.rs  input_thread.rs  keymap.rs  layout.rs  lib.rs  prelude.rs  runtime.rs  scheduler.rs  subscription.rs  terminal.rs  testkit.rs  theme.rs  tick.rs  tty.rs  watcher.rs
src/elements/: effect.rs  mod.rs
src/widgets/: dialog.rs  grid.rs  image_box.rs  image_viewport.rs  list.rs  mod.rs  picker.rs  table.rs  tabs.rs  tree.rs
tests/: parity.rs
visual-tests/: .gitignore  Cargo.toml  README.md
visual-tests/scripts/: generate_image_box_fixture_outputs.py  image_box_png.py  test_widget_box_export_contract.py
visual-tests/src/: main.rs
